1.更新Bugly SDK版本，更改初始化SDK方法，更新隐私政策和用户协议

--- a/module_set/src/main/assets/access_partner_directory.html
+++ b/module_set/src/main/assets/access_partner_directory.html
@@ -93,9 +93,9 @@
 			<tr>
 				<td>1</td>
 				<td>Bugly(异常信息收集SDK)</td>
-				<td>设备标识符(如IMEI、MEID、IMSI、AndroidID、SerialICCID、MAC地址、IP地址、WLAN接入点)</td>
+				<td>设备标识符(如IMEI、MEID、IMSI、AndroidID、SerialICCID、MAC地址、IP地址、WLAN接入点等)</td>
 				<td>收集应用内出现的异常情况信息</td>
-				<td>用户使用wanandroid</td>
+				<td>用户使用wanandroid APP,启动APP即可开启</td>
 				<td>腾讯公司</td>
 				<td>SDK收集</td>
 				<td>官网链接：<a href="https://bugly.qq.com/v2/index">https://bugly.qq.com/v2/index</a></td>
