1.接入ShareSdk分享平台

--- a/module_welcome/src/main/assets/wanandroid_userprivacy.html
+++ b/module_welcome/src/main/assets/wanandroid_userprivacy.html
@@ -185,7 +185,7 @@ p{margin-bottom:12px;text-indent:24px}
      text-align: center;
      margin-top: 15px;
      ">wanandroid隐私政策</h1>
-     <p>更新日期：2021年5月27日</p>
+     <p>更新日期：2025年02月18日</p>
      <p>生效日期：2021年6月5日</p>
      <p>如果您有任何疑问、意见或建议，请您把问题发送到邮箱：15015706912@163.com，我们将在7个工作日内进行处理。</p>
      <p>本政策将帮助您了解以下内容：</p>
@@ -226,6 +226,10 @@ p{margin-bottom:12px;text-indent:24px}
      
      <h4>&nbsp;&nbsp;&nbsp;&nbsp;5、业务功能五：扫一扫</h4>
      <p>提供扫一扫功能，您可以使用此功能进行扫描二维码，此功能需要您同意获取相机权限，如果不同意，将无法开启摄像头，最终无法执行上述操作。在您开启摄像头并扫描二维码后，wanandroid APP会使用控制振动权限，扫描成功后进行振动反馈。</p>
+
+     <h4>&nbsp;&nbsp;&nbsp;&nbsp;6、业务功能六：分享功能</h4>
+     <p>提供分享功能，您可以使用此功能进行扫描二维码，此功能需要您同意获取文件读取权限，如果不同意，最终无法执行上述操作。在您获取同意读取文件权限后，会提供选择图片或文字进行分享。</p>
+     <p>另：我们使用了第三方（上海掌之淘信息技术有限公司，以下称“MobTech”）MobTech ShareSDK服务为您提供社交分享、第三方登录社交分享、第三方登录功能。为了顺利实现该功能，您需要授权ShareSDK提供对应的服务;在您授权后，MobTech将收集您相关的个人信息。关于MobTech所收集的信息种类、用途、个人信息保护的规则及退出机制等，详见《ShareSDK隐私政策》</p>
 
 
      <h2>2、我们如何使用 Cookie 和同类技术</h2>
