--- a/module_set/src/main/assets/access_partner_directory.html
+++ b/module_set/src/main/assets/access_partner_directory.html
@@ -100,6 +100,16 @@
 				<td>SDK收集</td>
 				<td>官网链接：<a href="https://bugly.qq.com/v2/index">https://bugly.qq.com/v2/index</a></td>
 			</tr>
+			<tr>
+				<td>2</td>
+				<td>ShareSdk(社会化分享SDK)</td>
+				<td>设备标识符(如IMEI、MEID、IMSI、AndroidID、SerialICCID、MAC地址、IP地址、WLAN接入点等)</td>
+				<td>分享图文、链接等信息</td>
+				<td>用户使用wanandroid APP,启动APP即可开启</td>
+				<td>MobTech袤博科技</td>
+				<td>社会化分享</td>
+				<td>官网链接：<a href="https://www.mob.com/">https://www.mob.com/</a></td>
+			</tr>
 	
 		</table>
 	</body>
