接入百度地图sdk

--- a/module_welcome/src/main/assets/wanandroid_userprivacy.html
+++ b/module_welcome/src/main/assets/wanandroid_userprivacy.html
@@ -229,8 +229,12 @@ p{margin-bottom:12px;text-indent:24px}
 
      <h4>&nbsp;&nbsp;&nbsp;&nbsp;6、业务功能六：分享功能</h4>
      <p>提供分享功能，您可以使用此功能进行扫描二维码，此功能需要您同意获取文件读取权限，如果不同意，最终无法执行上述操作。在您获取同意读取文件权限后，会提供选择图片或文字进行分享。</p>
-     <p>另：我们使用了第三方（上海掌之淘信息技术有限公司，以下称“MobTech”）MobTech ShareSDK服务为您提供社交分享、第三方登录社交分享、第三方登录功能。为了顺利实现该功能，您需要授权ShareSDK提供对应的服务;在您授权后，MobTech将收集您相关的个人信息。关于MobTech所收集的信息种类、用途、个人信息保护的规则及退出机制等，详见《ShareSDK隐私政策》</p>
+     <p>另：我们使用了第三方（百度地图，以下称“MobTech”）百度地图SDK服务为您提供定位，地图功能。为了顺利实现该功能，您需要授权百度地图SDK提供对应的服务;在您授权后，MobTech将收集您相关的个人信息。关于MobTech所收集的信息种类、用途、个人信息保护的规则及退出机制等，详见《ShareSDK隐私政策》。</p>
 
+     
+     <h4>&nbsp;&nbsp;&nbsp;&nbsp;7、业务功能七：定位功能</h4>
+     <p>提供定位功能，您可以使用此功能进行天气查询，此功能需要您同意获取您所在地区经纬度或详细地址，并且可能会进行后台定位进行导航路线等。如果不同意，最终无法执行上述操作。在您获取同意读取位置后，会提供查询天气接口。</p>
+     <p>另：我们使用了第三方（百度地图，以下称“BaiduMapSdk”）BaiduMapSdk服务为您提供定位，导航等功能。为了顺利实现该功能，您需要授权BaiduMapSdk提供对应的服务;在您授权后，BaiduMapSdk将收集您相关的个人信息。关于BaiduMapSdk所收集的信息种类、用途、个人信息保护的规则及退出机制等，详见《百度地图Sdk隐私政策》。</p>
 
      <h2>2、我们如何使用 Cookie 和同类技术</h2>
      <h4>&nbsp;&nbsp;&nbsp;&nbsp;（一） Cookie</h4>
