--- a/module_set/src/main/assets/access_partner_directory.html
+++ b/module_set/src/main/assets/access_partner_directory.html
@@ -110,7 +110,17 @@
 				<td>社会化分享</td>
 				<td>官网链接：<a href="https://www.mob.com/">https://www.mob.com/</a></td>
 			</tr>
-	
+
+			<tr>
+				<td>3</td>
+				<td>BaiduMapSdk(百度地图SDK)</td>
+				<td>设备标识符(如IMEI、MEID、IDFA、IMSI、SSID、AndroidID、SerialICCID、MAC地址、IP地址、经纬度、应用名、WLAN接入点等)</td>
+				<td>获取地址定位，详细信息</td>
+				<td>用户使用wanandroid APP,启动APP即可开启，查询天气预报</td>
+				<td>百度科技</td>
+				<td>百度地图</td>
+				<td>官网链接：<a href="https://lbsyun.baidu.com/">https://lbsyun.baidu.com/</a></td>
+			</tr>
 		</table>
 	</body>
 </html>
